--- a/lib/gits_web/controllers/user_html/tickets.html.heex
+++ b/lib/gits_web/controllers/user_html/tickets.html.heex
@@ -1,66 +1,68 @@
-<h1 class="mt-8 p-2 text-4xl font-light">Tickets</h1>
-<div class="min-h-[calc(100dvh-theme(space.28))] space-y-4 p-2 pt-6 lg:px-0">
-  <!-- <h1 class="text-xl font-semibold">My Tickets</h1> -->
-  <div class="flex border-b">
-    <span :for={i <- ["Coming up"]} class="px-4">
-      <span class="block border-b-2 border-zinc-500 py-4 text-sm font-medium text-zinc-400 text-zinc-700">
-        <%= i %>
+<div class="mx-auto max-w-screen-lg space-y-8 pt-8 lg:p-0">
+  <h1 class="p-4 text-4xl font-medium">Tickets</h1>
+  <div class="min-h-[calc(100dvh-theme(space.28))] space-y-4 p-2 pt-6 lg:px-0">
+    <!-- <h1 class="text-xl font-semibold">My Tickets</h1> -->
+    <div class="flex border-b">
+      <span :for={i <- ["Coming up"]} class="px-4">
+        <span class="block border-b-2 border-zinc-500 py-4 text-sm font-medium text-zinc-400 text-zinc-700">
+          <%= i %>
+        </span>
       </span>
-    </span>
-  </div>
-  <div class="mx-auto grid gap-4 p-2 md:grid-cols-3 md:gap-14 md:pt-10">
-    <div
-      :for={instance <- @instances}
-      class="bg-slate-200x space-y-0.5 overflow-hidden rounded-2xl"
-    >
-      <div class="relative flex items-start gap-4 rounded-t-2xl border-x border-t border-zinc-300 p-2">
-        <div class="aspect-[4/5] relative w-16 shrink-0 overflow-hidden rounded-lg">
-          <img
-            src={
-              Gits.Bucket.get_listing_image_path(
-                instance.ticket.event.account_id,
-                instance.ticket.event.id
-              )
-            }
-            alt="feature image"
-            class="size-full object-cover"
-          />
+    </div>
+    <div class="mx-auto grid gap-4 p-2 md:grid-cols-3 md:gap-14 md:pt-10">
+      <div
+        :for={instance <- @instances}
+        class="bg-slate-200x space-y-0.5 overflow-hidden rounded-2xl"
+      >
+        <div class="relative flex items-start gap-4 rounded-t-2xl border-x border-t border-zinc-300 p-2">
+          <div class="aspect-[4/5] relative w-16 shrink-0 overflow-hidden rounded-lg">
+            <img
+              src={
+                Gits.Bucket.get_listing_image_path(
+                  instance.ticket.event.account_id,
+                  instance.ticket.event.id
+                )
+              }
+              alt="feature image"
+              class="size-full object-cover"
+            />
+          </div>
+          <div class="grid grow gap-2">
+            <span class="font-semibold text-zinc-500"><%= instance.ticket.name %></span>
+            <h2 class="line-clamp-2 font-semibold leading-tight text-zinc-900">
+              <%= instance.ticket.event.name %>
+            </h2>
+          </div>
+          <div class="flex shrink-0 flex-col gap-2">
+            <.link
+              navigate={~p"/my/tickets/#{instance.qr_code}"}
+              class="flex rounded-lg p-3 hover:bg-black/10"
+            >
+              <.icon name="hero-qr-code" />
+            </.link>
+          </div>
+          <div class="size-5 absolute -bottom-3 -left-3 z-10 rounded-full border border-zinc-300 bg-white">
+          </div>
+          <div class="size-5 absolute -right-3 -bottom-3 z-10 rounded-full border border-zinc-300 bg-white">
+          </div>
+          <div class="absolute inset-x-0 -bottom-1 h-1 rounded-full border-b-2 border-dashed border-zinc-300">
+          </div>
         </div>
-        <div class="grid grow gap-2">
-          <span class="font-semibold text-zinc-500"><%= instance.ticket.name %></span>
-          <h2 class="line-clamp-2 font-semibold leading-tight text-zinc-900">
-            <%= instance.ticket.event.name %>
-          </h2>
-        </div>
-        <div class="flex shrink-0 flex-col gap-2">
-          <.link
-            navigate={~p"/my/tickets/#{instance.qr_code}"}
-            class="flex rounded-lg p-3 hover:bg-black/10"
-          >
-            <.icon name="hero-qr-code" />
-          </.link>
-        </div>
-        <div class="size-5 absolute -bottom-3 -left-3 z-10 rounded-full border border-zinc-300 bg-white">
-        </div>
-        <div class="size-5 absolute -right-3 -bottom-3 z-10 rounded-full border border-zinc-300 bg-white">
-        </div>
-        <div class="absolute inset-x-0 -bottom-1 h-1 rounded-full border-b-2 border-dashed border-zinc-300">
-        </div>
-      </div>
-      <div class="grid rounded-b-2xl border-x border-b border-zinc-300 p-2">
-        <div class="flex grow items-center gap-2 p-2 text-zinc-500">
-          <.icon name="hero-calendar-days-micro" class="shrink-0" />
-          <span class="text-sm"><%= ticket_dates_from_event(instance.ticket.event) %></span>
-        </div>
-        <div class="flex grow items-center gap-2 truncate p-2 text-zinc-500">
-          <.icon name="hero-map-pin-micro" class="shrink-0" />
-          <%= if is_nil(instance.ticket.event.address) do %>
-            <span class="text-sm">No address</span>
-          <% else %>
-            <span class="truncate text-sm">
-              <%= instance.ticket.event.address.display_name %> &bull; <%= instance.ticket.event.address.city %>
-            </span>
-          <% end %>
+        <div class="grid rounded-b-2xl border-x border-b border-zinc-300 p-2">
+          <div class="flex grow items-center gap-2 p-2 text-zinc-500">
+            <.icon name="hero-calendar-days-micro" class="shrink-0" />
+            <span class="text-sm"><%= ticket_dates_from_event(instance.ticket.event) %></span>
+          </div>
+          <div class="flex grow items-center gap-2 truncate p-2 text-zinc-500">
+            <.icon name="hero-map-pin-micro" class="shrink-0" />
+            <%= if is_nil(instance.ticket.event.address) do %>
+              <span class="text-sm">No address</span>
+            <% else %>
+              <span class="truncate text-sm">
+                <%= instance.ticket.event.address.display_name %> &bull; <%= instance.ticket.event.address.city %>
+              </span>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
