--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<div class="grid-rows-[1fr_auto] mx-auto grid h-screen max-w-screen-2xl overflow-hidden lg:h-auto lg:overflow-auto">
+<div class="grid-rows-[1fr_auto] h-dvh mx-auto grid max-w-screen-2xl overflow-hidden lg:h-auto lg:overflow-visible">
   <div class="overflow-auto lg:overflow-visible">
     <.header current_user={@current_user} />
     <main class="mx-auto w-full max-w-screen-2xl">
