--- a/lib/gits_web/controllers/user_html/profile.html.heex
+++ b/lib/gits_web/controllers/user_html/profile.html.heex
@@ -1,12 +1,14 @@
-<div class="mx-auto max-w-screen-lg space-y-8 pt-8 lg:p-0">
+<div class="mx-auto max-w-screen-lg pt-8 lg:p-0">
   <h1 class="p-4 text-4xl font-medium">Profile</h1>
-  <div class="lg:flex lg:items-start lg:gap-20">
-    <div>
-      <div class="grid place-items-center">
-        <img src="/images/placeholder.png" alt="" class="size-48 rounded-full object-cover" />
-        <div class="flex -translate-y-6 items-center gap-2 rounded-full border bg-white px-4 py-2">
-          <.icon name="hero-camera-mini" />
-          <span class="text-sm">Edit</span>
+  <div class="lg:flex lg:items-start lg:gap-8">
+    <div class="w-full lg:max-w-64">
+      <div class="flex items-center gap-4 p-4 lg:items-end lg:py-0">
+        <div class="size-12 shrink-0 lg:size-20">
+          <img src="/images/placeholder.png" alt="" class="size-full rounded-full object-cover" />
+        </div>
+        <div class="grid gap-1 lg:mb-2">
+          <span class="font-medium">Foo</span>
+          <span class="truncate text-zinc-600">foo@bar.com</span>
         </div>
       </div>
     </div>
