--- a/lib/gits_web/controllers/page_html/host.html.heex
+++ b/lib/gits_web/controllers/page_html/host.html.heex
@@ -1,4 +1,4 @@
-<div class="grid-rows-[1fr_auto] grid h-screen">
+<div class="grid-rows-[1fr_auto] h-dvh grid">
   <div class="flex flex-wrap items-center gap-2 self-center p-4">
     <h1 class="grow text-5xl font-medium">Host with us</h1>
   </div>
