--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -30,7 +30,7 @@
     </div>
     <div class="flex grow items-center justify-between pl-2">
       <div class="flex w-36 gap-2 p-2">
-        <span class="text-sm font-medium">
+        <span class="truncate text-sm font-medium">
           Treehouse Inc
         </span>
         <.icon name="hero-chevron-down-mini" />
@@ -40,10 +40,10 @@
           :for={item <- navigation_items}
           navigate={item.href}
           class={[
-            "flex items-center gap-2 rounded-xl p-2 px-4",
+            "flex items-center gap-2 rounded-full p-2 px-4 border",
             if(item.current,
-              do: "bg-white text-zinc-950 ring-1 ring-zinc-200",
-              else: "text-zinc-500"
+              do: "bg-white text-zinc-800 border-zinc-300",
+              else: "text-zinc-500 border-transparent"
             )
           ]}
         >
@@ -51,17 +51,12 @@
           <span class="text-sm font-medium"><%= item.label %></span>
         </.link>
       </div>
-      <div class="flex gap-2 lg:gap-4">
-        <button class="size-9 inline-flex items-center justify-center rounded-lg border">
-          <.icon name="hero-bell" />
-        </button>
-        <button class="size-9 inline-flex items-center justify-center rounded-lg border">
+      <div class="flex items-center gap-2 lg:gap-4">
+        <button class="size-9 hidden items-center justify-center rounded-lg lg:inline-flex">
           <.icon name="hero-cog-6-tooth" />
         </button>
-      </div>
-      <div class="lg:hidden">
         <button
-          class="inline-flex rounded-lg p-2"
+          class="size-9 inline-flex items-center justify-center rounded-lg lg:hidden"
           phx-click={JS.toggle(to: "#host_dashboard_options")}
         >
           <.icon name="hero-bars-3" />
@@ -73,7 +68,7 @@
     <%= @inner_content %>
   </main>
 </div>
-<div class="fixed inset-0 hidden bg-white p-2" id="host_dashboard_options">
+<div class="fixed inset-0 space-y-4 bg-white p-2 lg:hidden" id="host_dashboard_options">
   <div class="flex w-full items-center gap-4 p-1">
     <div class="flex grow">
       <.link navigate="/" class="text-xl inline-block font-black italic">
@@ -84,11 +79,19 @@
         />
       </.link>
     </div>
-    <button class="inline-flex rounded-lg p-2" phx-click={JS.hide(to: "#host_dashboard_options")}>
+
+    <button class="size-9 inline-flex items-center justify-center rounded-lg">
+      <.icon name="hero-cog-6-tooth" />
+    </button>
+
+    <button
+      class="size-9 inline-flex items-center justify-center rounded-lg"
+      phx-click={JS.hide(to: "#host_dashboard_options")}
+    >
       <.icon name="hero-x-mark" />
     </button>
   </div>
-  <div class="grid gap-4">
+  <div class="grid gap-2">
     <.link
       :for={item <- navigation_items}
       navigate={item.href}
