--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -68,7 +68,7 @@
     <%= @inner_content %>
   </main>
 </div>
-<div class="fixed inset-0 space-y-4 bg-white p-2 lg:hidden" id="host_dashboard_options">
+<div class="fixed inset-0 hidden space-y-4 bg-white p-2" id="host_dashboard_options">
   <div class="flex w-full items-center gap-4 p-1">
     <div class="flex grow">
       <.link navigate="/" class="text-xl inline-block font-black italic">
