match graphics with homepage

--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -1,6 +1,6 @@
 <div class="grid gap-8 p-4 pt-20">
   <div>
-    <div class="relative inline-flex rounded-3xl border border-zinc-200 bg-zinc-50 p-8">
+    <div class="bg-zinc-500/5 relative inline-flex rounded-3xl border border-zinc-200 p-8">
       <div class="bg-zinc-500/5 absolute -top-4 left-36 h-12 w-40 rounded-xl border border-zinc-200">
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" class="size-28 text-zinc-300" viewBox="0 0 14 14">
@@ -23,7 +23,7 @@
   <div class="flex gap-8 font-medium">
     <.link
       navigate={~p"/host-with-us"}
-      class="rounded-lg border border-zinc-400 px-4 py-2 text-sm hover:underline"
+      class="rounded-lg border border-zinc-300 px-4 py-2 text-sm hover:underline"
     >
       Host with us
     </.link>
