--- a/lib/gits_web/controllers/page_html/host.html.heex
+++ b/lib/gits_web/controllers/page_html/host.html.heex
@@ -1,12 +1,15 @@
-<div class="grid w-full gap-16 p-4 pt-20">
-  <div>
+<div class="grid w-full gap-20 p-4 pt-20">
+  <div :if={false}>
     <h1 class="w-full grow text-5xl font-bold lg:text-6xl">Host with us</h1>
     <h2 class="w-full max-w-md text-lg text-zinc-600">
       For a seamless event ticketing and management. Enhance the event experience for promoters, and thier audiences
     </h2>
   </div>
 
-  <dl class="grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+  <dl
+    :if={false}
+    class="grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3"
+  >
     <div>
       <dt class="font-semibold text-gray-900">Exceptional customer service</dt>
       <dd class="mt-1 text-gray-600">
@@ -28,6 +31,8 @@
       </dd>
     </div>
   </dl>
+
+  <%= live_render(@conn, GitsWeb.DemoPricingCalculator) %>
 
   <div class="grid w-full gap-y-6 lg:flex lg:items-center lg:justify-between">
     <h2 class="w-full text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
