--- a/lib/gits_web/controllers/page_html/host.html.heex
+++ b/lib/gits_web/controllers/page_html/host.html.heex
@@ -10,7 +10,7 @@
     :if={false}
     class="grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3"
   >
-    <div>
+    <div :if={false}>
       <dt class="font-semibold text-gray-900">Exceptional customer service</dt>
       <dd class="mt-1 text-gray-600">
         We’ll handle ticketing, fan queries, and refunds so you can concentrate on making your event incredible.
