--- a/lib/gits_web/controllers/page_html/host.html.heex
+++ b/lib/gits_web/controllers/page_html/host.html.heex
@@ -1,16 +1,13 @@
 <div class="grid w-full gap-20 p-4 pt-20">
-  <div :if={false}>
+  <div>
     <h1 class="w-full grow text-5xl font-bold lg:text-6xl">Host with us</h1>
     <h2 class="w-full max-w-md text-lg text-zinc-600">
       For a seamless event ticketing and management. Enhance the event experience for promoters, and thier audiences
     </h2>
   </div>
 
-  <dl
-    :if={false}
-    class="grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3"
-  >
-    <div :if={false}>
+  <dl class="grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+    <div>
       <dt class="font-semibold text-gray-900">Exceptional customer service</dt>
       <dd class="mt-1 text-gray-600">
         We’ll handle ticketing, fan queries, and refunds so you can concentrate on making your event incredible.
